add_executable(fast_integration_tests mt_kahypar_integration_tests.cc)
target_link_libraries(fast_integration_tests gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
set_property(TARGET fast_integration_tests PROPERTY CXX_STANDARD 17)
set_property(TARGET fast_integration_tests PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(strong_integration_tests mt_kahypar_integration_tests.cc)
target_link_libraries(strong_integration_tests gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
set_property(TARGET strong_integration_tests PROPERTY CXX_STANDARD 17)
set_property(TARGET strong_integration_tests PROPERTY CXX_STANDARD_REQUIRED ON)
target_compile_definitions(strong_integration_tests PUBLIC USE_STRONG_PARTITIONER)

# exclude integration tests from default build target
set_target_properties(fast_integration_tests PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
set_target_properties(strong_integration_tests PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)

set(TARGETS_WANTING_ALL_SOURCES ${TARGETS_WANTING_ALL_SOURCES} fast_integration_tests strong_integration_tests PARENT_SCOPE)

